crates/rehearse/tests/ui/pipeline/fail/step_outside.rs
use rehearse::step;

fn main() {
    step!(anything());
}

